--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Augmented Reality Projects</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.jfif" />
+
     <link rel=stylesheet href="css/index.css" />
 </head>
 
