--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
 
     <div class="bigTitle">Three.js and AR.js Mini Projects</div>
-    <hr>
-    <font color="white">The goal of this collection is to provide a set of basic and instructive examples that introduce the various features in the Javascript-based Augmented Reality (AR) library,
-        <a class="toc">AR.js</a>. <a class="toc" href="https://threejs.org/">THREE.js</a> examples are also included.
-        <br/><br/> Viewing the AR examples will require a device with a camera and one or both of the <a class="toc" href="markers/hiro.png">Hiro</a> and <a class="toc" href="markers/kanji.png">Kanji</a> marker patterns along with the <a class="toc">alphabet marker patterns</a>.
-        (either printed or displayed on a second device).
-        <br/><br/>
-    </font>
+    <hr> The goal of this collection is to provide a set of basic and instructive examples that introduce the various features in the Javascript-based Augmented Reality (AR) library,
+    <a class="toc">AR.js</a>. <a class="toc" href="https://threejs.org/">THREE.js</a> examples are also included.
+    <br/><br/> Viewing the AR examples will require a device with a camera and one or both of the <a class="toc" href="markers/hiro.png">Hiro</a> and <a class="toc" href="markers/kanji.png">Kanji</a> marker patterns along with the <a class="toc">alphabet marker patterns</a>.
+    (either printed or displayed on a second device).
+    <br/><br/>
+
 
     <hr/>
 
