--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="fancy">
         <a href="hello-cube.html">
             <img src="images/demo/hello-cube.png" class="superImage" />
-            <br/>Basic Cube</a>
+            <br/><a class="text-white">Basic Cube</a></a>
         <p class="superText">A basic scene that superimposes a cube on a Hiro marker.
         </p>
     </div>
@@ -30,7 +30,7 @@
     <div class="fancy">
         <a href="custom-patterns.html">
             <img src="images/demo/custom-patterns.png" class="superImage" />
-            <br/>Many Cubes</a>
+            <br/> <a class="text-white">Many Cubes</a></a>
         <p class="superText">A scene that superimposes different colored cubes on a Hiro, Kanji, and letter markers.
         </p>
     </div>
@@ -46,7 +46,7 @@
     <div class="fancy">
         <a href="texture.html">
             <img src="images/demo/texture.png" class="superImage" />
-            <br/>Image Texture</a>
+            <br/><a class="text-white">Image Texture</a></a>
         <p class="superText">An image is positioned to cover a Hiro marker.
         </p>
     </div>
@@ -54,7 +54,7 @@
     <div class="fancy">
         <a href="globe.html">
             <img src="images/demo/globe.png" class="superImage" />
-            <br/>Rotating Globe</a>
+            <br/><a class="text-white">Rotating Globe </a></a>
         <p class="superText">A rotating globe (illuminated by a point light) is positioned above a Hiro marker.
         </p>
     </div>
@@ -62,7 +62,7 @@
     <div class="fancy">
         <a href="video.html">
             <img src="images/demo/video.png" class="superImage" />
-            <br/>Video Texture</a>
+            <br/><a class="text-white">Video Texture</a></a>
         <p class="superText">A flat plane, with a video for a texture, is positioned to cover a Hiro marker.
         </p>
     </div>
@@ -70,7 +70,7 @@
     <div class="fancy">
         <a href="shader.html">
             <img src="images/demo/shader.png" class="superImage" />
-            <br/>Shader</a>
+            <br/><a class="text-white">Shader</a></a>
         <p class="superText">A flat plane moves up and down above a Hiro marker; position and tint color are controlled by vertex and fragment shaders.
         </p>
     </div>
@@ -78,7 +78,7 @@
     <div class="fancy">
         <a href="model.html">
             <img src="images/demo/model.png" class="superImage" />
-            <br/>Loading 3D Models</a>
+            <br/><a class="text-white">Loading 3D Models</a></a>
         <p class="superText">A 3D model (obj and mtl files) are loaded and displayed above a Hiro marker.
         </p>
     </div>
@@ -86,7 +86,7 @@
     <div class="fancy">
         <a href="hole-box.html">
             <img src="images/demo/hole-box.png" class="superImage" />
-            <br/>Hole in the Floor (Box)</a>
+            <br/><a class="text-white">Hole in the floor (Box)</a></a>
         <p class="superText">A "hole in the floor" effect. Uses a box geometry to mask the hidden parts of the hole.
         </p>
     </div>
@@ -94,7 +94,7 @@
     <div class="fancy">
         <a href="hole-plane.html">
             <img src="images/demo/hole-box.png" class="superImage" />
-            <br/>Hole in the Floor (Plane)</a>
+            <br/><a class="text-white">Hole in the Floor (Plane)</a></a>
         <p class="superText">Another "hole in the floor" effect, using a plane geometry to mask the hidden parts of the hole.
         </p>
     </div>
@@ -102,7 +102,7 @@
     <div class="fancy">
         <a href="hole-ring.html">
             <img src="images/demo/hole-ring.png" class="superImage" />
-            <br/>Hole in the Floor (Ring)</a>
+            <br/><a class="text-white">Hole in the Floor (Ring)</a></a>
         <p class="superText">A cylindrical "hole in the floor" effect, using a ring geometry to mask the hidden parts of the hole.
         </p>
     </div>
@@ -110,21 +110,21 @@
     <div class="fancy">
         <a href="basic-scene.html" target="_blank">
             <img src="images/demo/basic-scene.png" class="superImage" />
-            <br/>Basic Scene</a>
+            <br/><a class="text-white">Basic Scene</a></a>
         <p class="superText"> A basic scene created with only Three.js (no AR), useful for prototyping ideas before adding in AR components. </p>
     </div>
 
     <div class="fancy">
         <a href="water-effect.html" target="_blank">
             <img src="images/demo/water-effect.png" class="superImage" />
-            <br/>Water Effect (no AR)</a>
+            <br/><a class="text-white">Water Effect(No AR)</a></a>
         <p class="superText"> An animated effect (using shaders) that looks like water flowing out from a central point and being absorbed into the floor. (No AR.)</p>
     </div>
 
     <div class="fancy">
         <a href="water-effect-AR.html" target="_blank">
             <img src="images/demo/water-effect-AR.png" class="superImage" />
-            <br/>Water Effect (AR version)</a>
+            <br/><a class="text-white">Water Effect (AR version)</a></a>
         <p class="superText"> An animated effect (using shaders) that looks like water flowing out from a cylindrical hole (displayed above a Hiro marker), and being absorbed into the floor.
             <!-- <br/>Video preview <a class="toc" href="https://www.youtube.com/watch?v=3DfcD5APnEU">here</a>. </p> -->
     </div>
@@ -147,7 +147,7 @@
     <div class="fancy">
         <a href="portal-half-keyboard-test.html" target="_blank">
             <img src="images/demo/portal-half-keyboard-test.png" class="superImage" />
-            <br/>Portal Test</a>
+            <br/><a class="text-white">Portal Test</a></a>
         <p class="superText"> Creating a "portal to another world" effect. Camera moves using same controls as Object Movement example. Only visible from one side.
             <br/>Not very robust -- see the following portal examples instead.</p>
     </div>
@@ -180,7 +180,7 @@ onto a plane in the scene. Camera moves using same controls as Object Movement e
     <div class="fancy">
         <a href="portal-view-AR.html" target="_blank">
             <img src="images/demo/portal-view-AR.png" class="superImage" />
-            <br/>Portal View (AR Version)</a>
+            <br/><a class="text-white">Portal View (AR Version)</a></a>
         <p class="superText"> An augmented reality version of the "portal to another world" effect. Portal renders above a Kanji marker.
             <!-- <br/>Video preview <a class="toc" href="https://www.youtube.com/watch?v=-gZ3Kv9juYg">here</a>. </p> -->
     </div>
@@ -188,7 +188,7 @@ onto a plane in the scene. Camera moves using same controls as Object Movement e
     <div class="fancy">
         <a href="magic-cube.html" target="_blank">
             <img src="images/demo/magic-cube.png" class="superImage" />
-            <br/>Magic Cube Effect</a>
+            <br/><a class="text-white">Magic Cube Effect</a></a>
         <p class="superText"> Creates a "magic cube effect" that overlays a cube covered with six AR markers <a class="toc" href="markers/cube.png">in this pattern</a>.
             <!-- <br/>Video preview <a class="toc" href="https://www.youtube.com/watch?v=ZI6oJJFgACM">here</a>. </p> -->
     </div>
@@ -196,7 +196,7 @@ onto a plane in the scene. Camera moves using same controls as Object Movement e
     <div class="fancy">
         <a href="globe-multi-marker.html" target="_blank">
             <img src="images/demo/globe-multi-marker.png" class="superImage" />
-            <br/>Globe with Multiple Markers</a>
+            <br/><a class="text-white">Globe with Multiple Markers</a></a>
         <p class="superText"> Similar to the Rotating Globe example: places a globe over a Kanji marker. If Kanji marker is blocked, uses other markers (<a class="toc" href="markers/letterA.png">letter A</a> and <a class="toc" href="markers/letterB.png">letter B</a>) to position
             the globe. </p>
     </div>
@@ -220,14 +220,14 @@ onto a plane in the scene. Camera moves using same controls as Object Movement e
     <div class="fancy">
         <a href="shadow-balls.html" target="_blank">
             <img src="images/demo/shadow-balls.png" class="superImage" />
-            <br/>Shadow Balls</a>
+            <br/><a class="text-white">Shadow Balls</a></a>
         <p class="superText"> Creates four colored bouncing basketballs around a Kanji marker. The balls cast shadows onto the plane containing the marker. </p>
     </div>
 
     <div class="fancy">
         <a href="parabolic-path.html" target="_blank">
             <img src="images/demo/parabolic-path.png" class="superImage" />
-            <br/>Parabolic Path</a>
+            <br/><a class="text-white">Parabolic Path</a></a>
         <p class="superText"> A basketball launches from a <a class="toc" href="markers/letterA.png">Letter-A</a> marker and falls towards a <a class="toc" href="markers/letterB.png">Letter-B</a> marker, following a parabolic path. The ball casts shadows, and a clipping plane
             (see above example) is used to make the ball disappear into the marker. </p>
     </div>
