--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div class="bigTitle">Three.js and AR.js Mini Projects</div>
-    <hr> The goal of this collection is to provide a set of basic and instructive examples that introduce the various features in the Javascript-based Augmented Reality (AR) library,
-    <a class="toc">AR.js</a>. <a class="toc" href="https://threejs.org/">THREE.js</a> examples are also included.
+    <hr> The purpose of this project is to showcase several usability ideas of Augmented Reality in various fields of life. The Javascript libraries-
+    <a class="toc">AR.js</a> and <a class="toc" href="https://threejs.org/">THREE.js</a>are used.
     <br/><br/> Viewing the AR examples will require a device with a camera and one or both of the <a class="toc" href="markers/hiro.png">Hiro</a> and <a class="toc" href="markers/kanji.png">Kanji</a> marker patterns along with the <a class="toc">alphabet marker patterns</a>.
     (either printed or displayed on a second device).
     <br/><br/>
