--- a/index.html
+++ b/index.html
@@ -231,7 +231,12 @@ onto a plane in the scene. Camera moves using same controls as Object Movement e
         <p class="superText"> A basketball launches from a <a class="toc" href="markers/letterA.png">Letter-A</a> marker and falls towards a <a class="toc" href="markers/letterB.png">Letter-B</a> marker, following a parabolic path. The ball casts shadows, and a clipping plane
             (see above example) is used to make the ball disappear into the marker. </p>
     </div>
-
+    <!-- <br><br>
+    <div class="bigTitle">FEEDBACKS</div>
+    <br>
+    <div style="margin: auto;"> <img class="fbimg" src="/images/feedback1.jpeg" alt="">
+    </div>
+    <br><br><br><br><br><br> -->
     <!--
 <div class="fancy">
 <a href="screen-hole.html" target="_blank">
