--- a/portal-view-AR.html
+++ b/portal-view-AR.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Hello, AR Cube!</title>
+    <title>Hello, AR portal!</title>
     <!-- include three.js library -->
     <script src='js/three.js'></script>
     <!-- include jsartookit -->
