--- a/basic-scene.html
+++ b/basic-scene.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Hello, world!</title>
+    <title>Hello, basic world!</title>
     <!-- include three.js library -->
     <script src='js/three.js'></script>
 </head>
