--- a/globe-multi-marker.html
+++ b/globe-multi-marker.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Hello, world!</title>
+    <title>Hello, multi marker globe!</title>
     <script src='js/keyboard.js'></script>
     <!-- include three.js library -->
     <script src='js/three.js'></script>
