--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Hello, world!</title>
+    <title>Hello, video texture world!</title>
     <!-- include three.js library -->
     <script src='js/three.js'></script>
     <!-- include jsartookit -->
